# jticker-controller

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.tests  Jenkinsfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py
jticker_controller/: __main__.py  api-spec.yml  app.py  controller.py  handlers.py  logging.py  receiver.py
jticker_controller/cli/: __main__.py
tests/: conftest.py  test_endpoint.py
tests/mocks/test_add_candles/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_add_task/jticker_controller.controller/: InfluxDBClient
tests/mocks/test_add_task/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_get_candles/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_healthcheck/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_migration/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_storage_query/jticker_controller.controller/: InfluxDBClient
tests/mocks/test_storage_query/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_strip/jticker_controller.controller/: InfluxDBClient
tests/mocks/test_strip/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
