[tool.poetry]
name = "jticker-controller"
version = "1.1.0"
description = "Jticker management app"
authors = ["Nikita Melentev <nikita.melentev@jibrel.network>"]

[tool.poetry.dependencies]
python = "^3.7"
# https://github.com/sdispater/poetry/issues/668
# jticker-core = {path = "jticker-core/", optional = true}
mode = "^4.0"
aiohttp = "=3.5.4"
giveme = "^1.0"
sentry-sdk = "^0.11.2"
loguru = "^0.3.2"
addict = "^2.2"
aiokafka = "^0.5.2"
backoff = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-asyncio = "^0.10.0"
pylama = "^7.7"
mypy = "^0.720.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
