[metadata]
name = jticker_controller
; version = file: version.txt
url = https://github.com/jibrelnetwork/jticker-controller
description = Jticker controller
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = jticker_controller
python_requires = >= 3.7
